# iEngineer

./: .env.example  .gitignore  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
.cargo/: config.toml
.github/workflows/: build-windows.yml  ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
Docs/ADR/: ADR.md
Docs/Architecture/: Architecture.mermaid  Integration Map.md  Tech Stack.md
Docs/Engineering/: POCs.md
Docs/Product/: Future Ideas.md  PRD.md  Product.md
Docs/Research/: OBS-websockets.md  TTS.md  iRacing-api.md  iRacing-camera.md  iRacing-positional-telemetry.md  iRacing-telemetry.md  llm-audio-playback.md
Docs/Specs/: 04-broadcast-plan-schema.md  Data Pipeline & Session State Spec.md  Racing Engineer Behavior Spec.md  Stream Engineer Behavior Spec.md
Documentation/: Design
apps/hub-server/: AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
apps/hub-server/agents/: llms-full.txt
apps/hub-server/config/: engineer-config.json
apps/hub-server/migrations/: 001_engineer_events.sql  002_add_llm_audit_fields.sql
apps/hub-server/prompts/: personality.md  system-base.md  tier3-driver-query.md  tier3-pit-entry.md  tier3-post-sector.md  tier3-safety-car.md
apps/hub-server/src/: Layout.tsx  api.ts  app.ts  env.ts  index.ts  logger.ts  routes.ts  server-init.ts  telemetry.ts
apps/hub-server/src/db/: client.ts
apps/tauri-client/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/tauri-client/src/: App.tsx  constants.ts  main.tsx
apps/tauri-client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/tauri-client/src-tauri/.cargo/: config.toml
apps/tauri-client/src-tauri/bindings/: AppConfig.ts  AudioDevice.ts  ConnectionStatus.ts  ConnectionTestResult.ts  DebugSnapshot.ts  SessionInfo.ts  TelemetryField.ts  TelemetryValue.ts  UnavailableDevice.ts  VarType.ts  VoiceProfileResult.ts  VoiceProfileState.ts
apps/tauri-client/src-tauri/models/: .gitignore  download.sh
apps/tauri-client/src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  state.rs
apps/tauri-client/src-tauri/src/audio/: capture.rs  mod.rs  playback.rs  resampler.rs
apps/tauri-client/src-tauri/src/camera/: commands.rs  mod.rs
apps/tauri-client/src-tauri/src/db/: mod.rs
apps/tauri-client/src-tauri/src/engineer/: mod.rs  playback_queue.rs  ptt_pipeline.rs  query_publisher.rs  subscriber.rs
apps/tauri-client/src-tauri/src/hotkeys/: mod.rs  ptt.rs
apps/tauri-client/src-tauri/src/iracing/: defines.rs  mod.rs  sdk.rs  types.rs  watcher.rs
apps/tauri-client/src-tauri/src/redis/: mod.rs  pubsub.rs  streams.rs
apps/tauri-client/src-tauri/src/stt/: mod.rs  whisper.rs
apps/tauri-client/src-tauri/src/telemetry/: debug_snapshot.rs  downsampler.rs  logger.rs  mod.rs  publisher.rs  publisher_task.rs  sampler.rs
infra/: docker-compose.dev.yml  docker-compose.yml
infra/config/otel/: collector.yaml
pocs/0001-audio-pipeline-latency/: .env.example  README.md  RETRO.md  package.json
pocs/0001-audio-pipeline-latency/fixtures/: .gitignore  prompt.txt
pocs/0001-audio-pipeline-latency/results/: measurements.json
pocs/0001-audio-pipeline-latency/src/: index.ts  llm.ts  stt.ts  tts.ts
pocs/0002-local-stt-latency/: Cargo.toml  README.md  RETRO.md  package.json
pocs/0002-local-stt-latency/fixtures/: .gitignore  generate.sh
pocs/0002-local-stt-latency/fixtures/models/: .gitignore  download.sh
pocs/0002-local-stt-latency/results/: measurements.json
pocs/0002-local-stt-latency/src/: main.rs
pocs/0003-streaming-llm-tts/: .env.example  README.md  RETRO.md  package.json
pocs/0003-streaming-llm-tts/results/: measurements.json
pocs/0003-streaming-llm-tts/src/: index.ts  llm.ts  pipeline.ts  timer.ts
pocs/_template/: README.md  package.json
pocs/_template/src/: index.ts
scripts/: build-windows-push.sh  build-windows.cmd  inject-braking-sequence.js  inject-pit-entry.js  inject-session-telemetry.js  patch-hono-preact.mjs
specs/001-iracing-sdk-diagnostics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-iracing-sdk-diagnostics/checklists/: requirements.md
specs/001-iracing-sdk-diagnostics/contracts/: tauri-commands.md  tauri-events.md
specs/002-redis-telemetry-publish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-redis-telemetry-publish/checklists/: requirements.md
specs/002-redis-telemetry-publish/contracts/: redis-streams.md
specs/003-race-state-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-race-state-engine/checklists/: requirements.md
specs/003-race-state-engine/contracts/: hub-redis-outputs.md
specs/004-rule-based-alerts-voice/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rule-based-alerts-voice/checklists/: requirements.md
specs/004-rule-based-alerts-voice/contracts/: alert-rules.md  chatterbox-tts.md  hub-audio-endpoint.md
specs/005-llm-push-to-talk/: c2-personality-compare.sh  data-model.md  manual-test-plan.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-llm-push-to-talk/checklists/: requirements.md
specs/005-llm-push-to-talk/contracts/: engineer-events-audit.md  engineer-query-channel.md  llm-tools.md  personality-prompt.md  tier3-synthesis.md
specs/006-client-config-ui/: data-model.md  manual-testing-guide.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-client-config-ui/checklists/: requirements.md
specs/006-client-config-ui/contracts/: hub-llm-config.md  hub-voice-profile.md  tauri-commands.md
specs/007-tier2-alert-completion/: data-model.md  follow-up-issues.md  manual-testing-guide.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+129 files in other folders)
