[package]
name = "poc-0002-local-stt-latency"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "poc0002"
path = "src/main.rs"

[features]
default = []
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]

[dependencies]
whisper-rs = "0.14"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
