[package]
name = "iracing-engineer"
version = "0.0.1"
edition = "2021"

[features]
# Required for production builds — enables serving bundled assets via WebView custom protocol.
# tauri dev strips this; tauri build (or manual --features custom-protocol) adds it.
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "iracing_engineer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = [] }
ts-rs = "10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
redis = { version = "0.25", features = ["tokio-comp", "streams"] }
rusqlite = { version = "0.31", features = ["bundled"] }
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["mp3"] }
rubato = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
# M5: global (unfocused) PTT hotkey + Stream Deck key passthrough (FR-003).
# Requires OS accessibility permission for global key capture.
tauri-plugin-global-shortcut = "2"

# M5 STT: local Whisper base.en via whisper-rs (POC-0002). Requires the model
# file `ggml-base.en.bin` present at runtime. GPU backend is platform-specific:
# Metal on macOS, Vulkan on Windows/AMD.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.14", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Memory",
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
whisper-rs = { version = "0.14", features = ["vulkan"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
